--- a/pages/styles.css
+++ b/pages/styles.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@400;700;800&display=swap');
 
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Manrope', sans-serif;
+    font-family: 'Lexend Deca', sans-serif;
 }
 
 .root {
@@ -46,6 +46,14 @@ body {
 .header-title {
     display: flex;
     gap: 12px;
+}
+
+.header-title img {
+    width: 100px;
+    height: 100px;
+    image-rendering: pixelated;
+    flex-shrink: 0;
+    padding-right: 5px;
 }
 
 .header-title h1 {
@@ -93,12 +101,12 @@ body {
     flex: 0 0 auto;
     flex-flow: column nowrap;
     gap: 10px;
-    height: 150px;
+    height: 30px;
     overflow: hidden;
     padding: 20px;
     position: relative;
     width: 610px;
-    max-width: 1200px;
+    max-width: 800px;
     will-change: transform;
     overflow: auto;
     outline: none;
@@ -107,14 +115,14 @@ body {
     font-style: normal;
     letter-spacing: 0px;
     line-height: 1.6em;
-    text-align: start;
+    text-align: center;
     color: rgba(255, 255, 255, 0.75);
     text-decoration: none;
     text-transform: none;
 }
 
 textarea {
-    font-family: 'Manrope', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 
@@ -172,7 +180,7 @@ textarea {
 .generate-button {
     place-content: flex-start;
     align-items: flex-start;
-    background-color: rgb(255, 79, 18);
+    background-color: rgb(255, 153, 0);
     border-radius: 100px;
     display: flex;
     flex: 0 0 auto;
@@ -183,7 +191,7 @@ textarea {
     padding: 16px 24px;
     position: relative;
     text-decoration: none;
-    width: min-content;
+    width: max-content;
     will-change: transform;
     cursor: pointer;
 }
@@ -297,7 +305,7 @@ textarea {
 }
 
 .output-header h3 {
-    font-family: "Manrope", serif;
+    font-family: "Roboto", serif;
     font-size: 28px;
     font-style: normal;
     font-weight: 800;
@@ -313,7 +321,7 @@ textarea {
 .output-content {
     outline: none;
     display: flex;
-    /* max-width: 25%; */
+    max-width: 100%;
     flex-direction: column;
     justify-content: flex-start;
     flex-shrink: 0;
@@ -321,7 +329,9 @@ textarea {
 }
 
 .output-content p {
-    text-align: center;
+    font-family: "Roboto", serif;
+    font-size: 20px;
+    text-align: left;
     white-space: pre-line;
     color: rgba(255, 255, 255, 0.5);
 }
