--- a/pages/styles.css
+++ b/pages/styles.css
@@ -10,7 +10,6 @@ body {
     display: flex;
     place-content: center flex-start;
     align-items: center;
-    background-color: rgb(0, 0, 0);
     flex-flow: column nowrap;
     gap: 10px;
     height: 100vh;
@@ -40,7 +39,7 @@ body {
     flex-direction: column;
     width: 100%;
     align-items: center;
-    color: #FFF
+    color: black;
 }
 
 .header-title {
@@ -63,7 +62,7 @@ body {
     font-style: normal;
     font-weight: 400;
     line-height: 1.4em;
-    color: rgba(255, 255, 255, 0.75);
+    color: black;
 }
 
 .prompt-container {
@@ -80,14 +79,14 @@ body {
 
 .prompt-box {
     border-bottom-width: 1px;
-    border-color: rgba(255, 255, 255, 0.1);
+    border-color: rgb(219, 219, 219);
     border-left-width: 1px;
     border-right-width: 1px;
     border-style: solid;
     border-top-width: 1px;
     place-content: flex-start;
     align-items: flex-start;
-    background-color: rgba(255, 255, 255, 0.05);
+    background-color: rgb(219, 219, 219);
     border-radius: 16px;
     display: flex;
     flex: 0 0 auto;
@@ -108,7 +107,7 @@ body {
     letter-spacing: 0px;
     line-height: 1.6em;
     text-align: start;
-    color: rgba(255, 255, 255, 0.75);
+    color: black;
     text-decoration: none;
     text-transform: none;
 }
@@ -172,7 +171,8 @@ textarea {
 .generate-button {
     place-content: flex-start;
     align-items: flex-start;
-    background-color: rgb(255, 79, 18);
+    background-color: rgb(0, 0, 0);
+    color: black;
     border-radius: 100px;
     display: flex;
     flex: 0 0 auto;
@@ -323,7 +323,7 @@ textarea {
 .output-content p {
     text-align: center;
     white-space: pre-line;
-    color: rgba(255, 255, 255, 0.5);
+    color: black;
 }
 
 @media (min-width: 810px) and (max-width: 1199px) {
