--- a/pages/styles.css
+++ b/pages/styles.css
@@ -116,27 +116,23 @@ body {
 }
 
 .answerBox {
-    position: sticky;
     top: 50%;
     left: 50%;
     font-size: 20px;
     padding: 15px;
     /* add a rounded border */
     border-radius: 16px;
+    text-decoration: none;
+    color: transparent;
+    content: "hover to see answer";
+    background: linear-gradient(180deg, #ffffff 0%, #f9f9f9 100%);
+    transition: 1s;
  }
- .answerBox::before {
-    content: "";
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    width: 100%;
-    height: 100%;
-    background: rgb(91, 91, 91);
-    transition: 0.5s ease-in-out;
-    border-radius: 12px;
- }
- .answerBox:hover::before {
-    left: -100%;
+
+ .answerBox:hover {
+    color: black;
+    /* give this div a modern background gradient design */
+
  }
 .prompt-box {
     border-bottom-width: 1px;
