--- a/pages/styles.css
+++ b/pages/styles.css
@@ -175,11 +175,15 @@ textarea {
     border: 1px solid #ccc;
     outline: 1px solid #ccc;
     font-family: 'Varela Round', sans-serif;
+    overflow: hidden;
+    transition: 1s;
 }
 
 
 .prompt-box:focus {
-    border-color:rgba(255, 255, 255, 0.75)
+    border-color:rgba(255, 255, 255, 0.75);
+    /* give it a subtle, blended shadow that's a bit big */
+    box-shadow: inset 0 0 8px 2px #888;
 }
 
 
